# python-weather-app

./: README.md  main.py  pyproject.toml
.streamlit/: config.toml
src/: main.py  styles.py  utils.py
